--- a/Assets/styles/main.css
+++ b/Assets/styles/main.css
@@ -153,6 +153,28 @@ li{
     height: 1px;
 }
 
+.bg-overlay {
+    background-image:  linear-gradient(rgba(29,38,113,0.7),rgba(195,55,100,0.3));  
+    }
+    
+    .hero-bg-media * {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+.text-center{
+    text-align: center;
+}
+
+.hero-block {
+    position: relative;
+    min-height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: gray;
+    overflow: hidden;
+}
 
 @media(max-width:600px){
 
