--- a/Assets/styles/main.css
+++ b/Assets/styles/main.css
@@ -162,19 +162,15 @@ li{
         width: 100%;
         height: 100%;
     }
-.text-center{
-    text-align: center;
-}
 
-.hero-block {
-    position: relative;
-    min-height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: gray;
-    overflow: hidden;
-}
+    .hero-text-container {
+        padding: 0 12% 4% 12%;
+        z-index: 2;
+    }
+
+    header, section, footer {
+        width: 100%;
+    }
 
 @media(max-width:600px){
 
