added css to header h1 and deleted hero-video.css file

--- a/Assets/styles/main.css
+++ b/Assets/styles/main.css
@@ -21,7 +21,6 @@
 
 }
 
-
 *{
     font-family: 'Readex Pro';
     line-height: 1.5em;
@@ -32,6 +31,11 @@
 
 body{
     background-color: var(--mainBgColor);            
+}
+
+.hero-block h1 {
+    font-size: calc(48px +(112 - 48)*((100vw - 320px) /(1600 - 320)));
+    margin-bottom: 24px;
 }
 
 p, span, li{
@@ -161,6 +165,17 @@ li{
         object-fit: cover;
         width: 100%;
         height: 100%;
+        margin: 0;
+        border: none;
+    }
+
+    .hero-block {
+        position: relative;
+        min-height: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        overflow: hidden;
     }
 
     .hero-text-container {
@@ -170,6 +185,12 @@ li{
 
     header, section, footer {
         width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .text-center {
+        text-align: center;
     }
 
 @media(max-width:600px){
